--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
     <section id="rest" class="page hide">
       <h1 style="padding-top:10%">What are your expenses?</h1>
       <br />
-      <form id="expense">
+      <form id="expense" style="margin-bottom: 50px;">
         <div >
           <input style="margin:auto" type="text" class="login-items" placeholder="$"/><br>
         </div>
@@ -62,8 +62,21 @@
 
       <span>401k Contribution</span>
       <div id="slidecontainer">
-        <input type="range" min="1" max="18000" value="50" class="slider" id="myRange">
+        <input type="range" min="0" max="10" value="5" class="slider" id="myRange" list="tickmarks">
       </div>
+      <datalist id="tickmarks">
+        <option value="0" label="0%">
+        <option value="0.01">
+        <option value="0.02">
+        <option value="0.03">
+        <option value="0.04">
+        <option value="0.05" label="5%">
+        <option value="0.06">
+        <option value="0.07">
+        <option value="0.08">
+        <option value="0.09">
+        <option value="0.1" label="10%">
+      </datalist>
 
 
       <div id="graph" class="aGraph"></div>
