fixed quick input bug

--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
       <br />
       <form id="income">
         <div >
-          <input  style="margin:auto" type="text" class="login-items" placeholder="$"/><br>
+          <input id="first_input" style="margin:auto" type="text" class="login-items" placeholder="$"/><br>
         </div>
       </form>
     </section>
@@ -55,7 +55,7 @@
       <br />
       <form id="expense" style="margin-bottom: 50px;">
         <div >
-          <input style="margin:auto" type="text" class="login-items" placeholder="$"/><br>
+          <input id="second_input" style="margin:auto" type="text" class="login-items" placeholder="$"/><br>
         </div>
       </form>
 
